fix: text align logical properties

--- a/scss/components/_accordion.scss
+++ b/scss/components/_accordion.scss
@@ -74,7 +74,7 @@
       // Type button
       &[role="button"] {
         width: 100%;
-        text-align: left;
+        text-align: start;
 
         // Marker
         &::after {
@@ -104,7 +104,7 @@
   [dir="rtl"] {
     #{$parent-selector} details {
       summary {
-        text-align: right;
+        text-align: end;
 
         &::after {
           float: left;
