--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -68,7 +68,7 @@
       }
 
       > footer {
-        text-align: right;
+        text-align: end;
 
         button,
         [role="button"] {
